--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <title>Мое веб-приложение</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
+        /* Принудительно задаем белый фон и черный текст */
         body {
-            background-color: #ffffff; /* Белый фон */
-            color: #000000; /* Черный текст */
+            background-color: #ffffff !important; /* Белый фон */
+            color: #000000 !important; /* Черный текст */
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
         }
         h1 {
-            color: #333333; /* Темно-серый заголовок */
+            color: #000000 !important; /* Черный заголовок */
         }
         p {
-            color: #000000; /* Черный текст */
+            color: #000000 !important; /* Черный текст */
         }
     </style>
 </head>
@@ -27,7 +28,10 @@
     <script>
         const tg = window.Telegram.WebApp;
         tg.expand(); // Развернуть приложение на весь экран
-        console.log(tg.initData); // Данные пользователя
+
+        // Принудительно задаем белый фон и черный текст через JavaScript
+        document.body.style.backgroundColor = "#ffffff";
+        document.body.style.color = "#000000";
     </script>
 </body>
 </html>
